--- a/html/root.html
+++ b/html/root.html
@@ -1,6 +1,5 @@
 <div class="app-container position-relative
-						d-flex flex-column vh-100 overflow-auto"
-						ng-controller="languageController">
+						d-flex flex-column vh-100 overflow-auto">
 	<header ui-view="header" class="sticky-top"></header>
 	<main 	ui-view="" class="position-relative flex-fill"></main>
 	<footer ui-view="footer" class="sticky-top"></footer>
