--- a/html/header.html
+++ b/html/header.html
@@ -31,7 +31,8 @@
         <!--------------Szolgáltatások oldal--------->
         <li class="nav-item mx-1">
           <a class="nav-link" ui-sref="services" ui-sref-active="active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-            <i class="bi bi-car-front"></i>
+            <!-- <i class="bi bi-car-front"></i> -->
+            <i class="fa-solid fa-car"></i>
             <span class="text-capitalize">{{lang.data.services}}</span>
           </a>
         </li>
@@ -39,7 +40,8 @@
         <!-------------Rólunk oldal------------------->
         <li class="nav-item mx-1">
           <a class="nav-link" ui-sref="about_us" ui-sref-active="active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
-            <i class="bi bi-info-circle-fill"></i>
+            <!-- <i class="bi bi-info-circle-fill"></i> -->
+            <i class="fa-solid fa-circle-info"></i>
             <span class="text-capitalize">{{lang.data.about_us}}</span>
           </a>
         </li>
@@ -50,7 +52,9 @@
         <!-------------------Foglalásaim--------------------------->
         <li class="nav-item mx-1 bg-warning rounded-3" ng-if="$root.user && $root.user.id">
           <a class="nav-link" ui-sref="profile({ section: 'myBookings' })">
-            <i class="bi bi-calendar-check "></i> {{lang.data.my_appointments}}
+            <i class="fa-regular fa-calendar"></i>
+            <!-- <i class="bi bi-calendar-check "></i>  -->
+            {{lang.data.my_appointments}}
           </a>
         </li>
 
@@ -118,7 +122,7 @@
         </li>
 
         <!--------------------Nyelvválasztó--------------------------->
-        <div">
+        <div>
           <li class="nav-item dropdown mx-1">
             <a class="nav-link dropdown-toggle" 
               href="#" 
