--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Super Car Wash</title>
 	<link rel="icon" type="image/png" href="./media/image/carwash_favicon.png">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	
 
 	<!-- Application components -->
 	<link rel="stylesheet" href="../components/bootstrap/5.3.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../components/font-awesome/6.5.2/css/all.min.css">
-  	<link rel="stylesheet" href="../common/css/app-common.css">
-  	<link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="../common/css/app-common.css">
+  <link rel="stylesheet" href="./css/app.css">
 </head>
 <body ng-app="app" data-bs-theme="dark">
 	
@@ -26,6 +26,7 @@
 	<script src="../components/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 	<script src="../common/js/app-common.js"></script>
 	<script src="../common/js/app-form.js"></script>
+	<script src="./js/app-user.js"></script>
 	<script src="./js/app.js"></script>
 </body>
 </html>
